<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.yinduowang.installment.app.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_32dp"
        android:background="@color/color_F6F6F6"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/width_16dp"
        android:text="@string/please_fill_bankcard_information"
        android:textColor="@color/color_9A9A9A"
        android:textSize="@dimen/size_13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="@dimen/width_54dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/width_17dp"
        android:text="@string/cardholder"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/tvCardholder"
        android:layout_width="0dp"
        android:layout_height="@dimen/width_54dp"
        android:layout_marginEnd="@dimen/width_17dp"
        android:gravity="center_vertical"
        android:paddingStart="34dp"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:text="于洪" />

    <View
        android:id="@+id/vLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_x5dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:background="@color/color_EAEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/width_54dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/width_17dp"
        android:paddingEnd="@dimen/width_20dp"
        android:text="@string/bankcard_number"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLine" />

    <EditText
        android:id="@+id/etFillBankcardNumber"
        android:layout_width="0dp"
        android:layout_height="@dimen/width_54dp"
        android:layout_marginEnd="@dimen/width_17dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/please_fill_bankcard_number"
        android:inputType="number"
        android:maxLength="19"
        android:paddingStart="34dp"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <View
        android:id="@+id/vLine2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_x5dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:background="@color/color_EAEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="@dimen/width_54dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/width_17dp"
        android:text="@string/phone_number"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLine2" />

    <EditText
        android:id="@+id/etFillPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="@dimen/width_54dp"
        android:layout_marginEnd="@dimen/width_17dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/please_enter_bank_reserved_cell_phone_number"
        android:inputType="number"
        android:maxLength="11"
        android:paddingStart="34dp"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <View
        android:id="@+id/vLine3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_x5dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:background="@color/color_EAEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="@dimen/width_54dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/width_17dp"
        android:text="@string/verification_code"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLine3" />

    <EditText
        android:id="@+id/etVerificationCode"
        android:layout_width="0dp"
        android:layout_height="@dimen/width_54dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/please_fill_verification_code"
        android:inputType="number"
        android:maxLength="6"
        android:paddingStart="34dp"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/tvClickToGet"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/tvClickToGet"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/width_17dp"
        android:gravity="center"
        android:text="@string/click_to_get"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/size_13sp"
        app:layout_constraintBottom_toBottomOf="@+id/etVerificationCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etVerificationCode" />

    <View
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_F6F6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/tvWarn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="5dp"
        android:paddingStart="17dp"
        android:paddingEnd="11dp"
        android:text="* 您最新绑定的银行卡为默认还款卡，借款到期时系统将会从默认银行卡中进行扣款"
        android:textColor="#ff9a9a9a"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/bg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvBindingCard"
        style="@style/text_submit"
        android:layout_height="@dimen/width_40dp"
        android:layout_marginStart="@dimen/width_17dp"
        android:layout_marginTop="@dimen/width_45dp"
        android:layout_marginEnd="@dimen/width_17dp"
        android:background="@drawable/selector_text_submit_btn"
        android:enabled="false"
        android:text="@string/determine_the_binding_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWarn" />

</androidx.constraintlayout.widget.ConstraintLayout>