<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_F6F6F6"
        android:orientation="vertical">
        <!--标题-->
        <com.yinduowang.installment.app.widget.TitleBar
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/titlebar">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/width_17dp"
                android:layout_marginTop="@dimen/width_17dp"
                android:layout_marginBottom="@dimen/width_17dp"
                android:text="@string/idea_feedback"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/size_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="39dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:src="@mipmap/ic_setting_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/textView18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView18" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCollectionComplains"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/layoutFeedback">

            <TextView
                android:id="@+id/tvToBeShipped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/width_17dp"
                android:layout_marginTop="@dimen/width_17dp"
                android:layout_marginBottom="@dimen/width_17dp"
                android:text="@string/collection_complain"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/size_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="39dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:src="@mipmap/ic_setting_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/tvToBeShipped"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvToBeShipped" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/vTop"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/width_17dp"
            android:layout_marginRight="@dimen/width_17dp"
            android:background="@color/color_EAEAEA"
            app:layout_constraintTop_toBottomOf="@+id/layoutFeedback"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDeliveryAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/layoutCollectionComplains"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/tvReturnAfterSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                android:text="@string/address_shou"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/size_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="39dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:src="@mipmap/ic_setting_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/tvReturnAfterSale"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvReturnAfterSale" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutChangeLoginPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/layoutDeliveryAddress"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                android:text="@string/change_login_password"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/size_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="39dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:src="@mipmap/ic_setting_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/textView23"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView23" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSetPayPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/layoutChangeLoginPsw"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/tvSetPswType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                android:text="@string/setting_pay_psw"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/size_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="39dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:src="@mipmap/ic_setting_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/tvSetPswType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvSetPswType" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/width_17dp"
            android:layout_marginRight="@dimen/width_17dp"
            android:background="@color/color_EAEAEA"
            app:layout_constraintTop_toBottomOf="@+id/layoutDeliveryAddress"
            tools:layout_editor_absoluteX="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/width_17dp"
            android:layout_marginRight="@dimen/width_17dp"
            android:background="@color/color_EAEAEA"
            app:layout_constraintTop_toBottomOf="@+id/layoutChangeLoginPsw"
            tools:layout_editor_absoluteX="16dp" />


        <TextView
            android:id="@+id/tvLoginExit"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="@dimen/width_10dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/exit_login"
            android:textSize="@dimen/size_15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/layoutSetPayPsw" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>